Changed encoder in InputCacheUtil